# Poker

./: .editorconfig  .gitignore  Poker.cabal  README.md  TODO.md  package.yaml
src/: Card.hs  Poker.hs
src/Poker/: Cards.hs  FiveCards.hs  Hand.hs  Ord.hs  Poker.hs  ThreeCards.hs  TwoCards.hs
test/: CardSpec.hs  PokerSpec.hs
