name:                Poker
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jnuank/Poker#readme
license:             BSD3
license-file:        LICENSE
author:              Jun Nakajima
maintainer:          ikuta1919@gmail.com
copyright:           2019 Jun Nakajima
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Poker, Poker.Cards, Poker.Ord, Poker.Hand, Poker.TwoCards, Poker.ThreeCards Card
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Poker
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Poker
  default-language:    Haskell2010

test-suite Poker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Poker
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jnuank/Poker
